--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             </div>
             <div id="players">
                 <div class="player">
-                    <h3 id="player1">Player 1</h3>
+                    <h3 id="player1" class="p1s p1d">Player 1</h3>
                 </div>
     
                 <div class="player">
-                    <h3 id="player2">Player 2</h3>
+                    <h3 id="player2" class="p2s p2d" >Player 2</h3>
                 </div>
             </div>
         </header>
